ディレクトリ構造の変更

--- a/Your_destiny_is_determined_by_the_random/Your_destiny_is_determined_by_the_random.vcxproj
+++ b/Your_destiny_is_determined_by_the_random/Your_destiny_is_determined_by_the_random.vcxproj
@@ -90,7 +90,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Test.cpp" />
+    <ClCompile Include="src\Main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="engine\assets\box-shadow128.png" />
