--- a/Your_destiny_is_determined_by_the_random/Your_destiny_is_determined_by_the_random.vcxproj
+++ b/Your_destiny_is_determined_by_the_random/Your_destiny_is_determined_by_the_random.vcxproj
@@ -90,7 +90,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\Main.cpp" />
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="ScreneManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="engine\assets\box-shadow128.png" />
@@ -216,6 +217,9 @@
   <ItemGroup>
     <Media Include="Example\Sound.mp3" />
     <Media Include="Example\風の丘.mp3" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ScreneManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
