--- a/Your_destiny_is_determined_by_the_random/Your_destiny_is_determined_by_the_random.vcxproj
+++ b/Your_destiny_is_determined_by_the_random/Your_destiny_is_determined_by_the_random.vcxproj
@@ -90,9 +90,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Client.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="ScreneManager.cpp" />
+    <ClCompile Include="Server.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="engine\assets\box-shadow128.png" />
@@ -220,9 +222,11 @@
     <Media Include="Example\風の丘.mp3" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Client.h" />
     <ClInclude Include="Const.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="ScreneManager.h" />
+    <ClInclude Include="Server.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
